--- a/internal/exporter/templates/page.html
+++ b/internal/exporter/templates/page.html
@@ -41,7 +41,7 @@ var NEGARANKS = [{{range .Rankings}}
 </div>
 
 <div id="resolver">
-<script type="text/javascript" src="../js/resolver_en.js"></script>
+<script type="text/javascript" src="../js/resolver_{{.Lang}}.js"></script>
 </div>
 
 </body></html>
