--- a/internal/exporter/templates/topten.html
+++ b/internal/exporter/templates/topten.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="resolver">
-<script type="text/javascript" src="../../../js/resolver_en.js"></script>
+<script type="text/javascript" src="../../../js/resolver_{{.Lang}}.js"></script>
 </div>
 
 </body></html>
