--- a/internal/exporter/templates/data.html
+++ b/internal/exporter/templates/data.html
@@ -1,10 +1,9 @@
 <script type="text/javascript">
-"Rank","Percentile","DensePercentile","Index","Among","Span","Value"
+
+["Rank","Percentile","DensePercentile","Index","Among","Span","Value"]
 var NEGARANKS = [{{range .Rankings}}
     [{{.Rank}},{{.Percentile}},{{.DensePercentile}},{{.Index}},{{.Among}},{{.Span}},{{.Value}}],{{end}}
   ];
-</script>
-
 
 var minGlobalTimestamp = new Date({{.BoundingYears.MinTimestamp.Unix}}*1000), maxGlobalTimestamp = new Date({{.BoundingYears.MaxTimestamp.Unix}}*1000);
 </script>
