--- a/internal/exporter/templates/page.html
+++ b/internal/exporter/templates/page.html
@@ -11,8 +11,10 @@
 <link rel="canonical" href="{{.CanonicalURL}}">
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
+<script type="text/javascript">
 {{template "data.html" .}}
+</script>
+
 
 <body>
 
