Semicolon addition at the line end

--- a/internal/exporter/templates/data.html
+++ b/internal/exporter/templates/data.html
@@ -1,4 +1,4 @@
-var NEGANAMES = ["Rank","Percentile","DensePercentile","Index","Among","Span","Value"]
+var NEGANAMES = ["Rank","Percentile","DensePercentile","Index","Among","Span","Value"];
 var NEGARANKS = [{{range .Rankings}}
     [{{.Rank}},{{.Percentile}},{{.DensePercentile}},{{.Index}},{{.Among}},{{.Span}},{{.Value}}],{{end}}
 ];
