removing neganames everywhere apart from homepage

--- a/internal/exporter/templates/homepage.html
+++ b/internal/exporter/templates/homepage.html
@@ -1,4 +1,5 @@
 <script>
+var NEGANAMES = ["Rank","Percentile","DensePercentile","Index","Among","Span","Value"];
 {{template "data.html" .}}
 
 var minGlobalTimestamp = new Date({{.BoundingYears.MinTimestamp.Unix}}*1000), maxGlobalTimestamp = new Date({{.BoundingYears.MaxTimestamp.Unix}}*1000);
