--- a/internal/exporter/templates/page.html
+++ b/internal/exporter/templates/page.html
@@ -34,7 +34,8 @@
 {{if .Links}}
 <div id="social-jumps">
 {{template "pagelist.html" .Links}}
-</div>{{end}}{{end}}
+</div>{{end}}{{else}}
+<div id="negawards"></div>{{end}}
 
 </div>
 
