--- a/internal/exporter/templates/topten.html
+++ b/internal/exporter/templates/topten.html
@@ -3,11 +3,11 @@
 <head id="topten" data-type="{{.Index}}" data-period="{{.Span}}" data-topic="{{.Topic}}">
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
-<meta property="og:image" content="http://{{.Lang}}.negapedia.org/images/logo.png"/>
+<meta property="og:image" content="http://www.negapedia.org/images/logo.png"/>
 
 <title>{{.Title}} - Negapedia</title>
 
-<link rel="stylesheet prefetch" type="text/css" href="../../../css/core.css">
+<link rel="stylesheet prefetch" type="text/css" href="http://www.negapedia.org/css/core.css">
 <link rel="canonical" href="{{.CanonicalURL}}">
 
 <body>
@@ -26,7 +26,7 @@
 </div>
 
 <div id="resolver">
-<script type="text/javascript" src="../../../js/resolver_{{.Lang}}.js"></script>
+<script type="text/javascript" src="http://www.negapedia.org/js/resolver.js"></script>
 </div>
 
 </body></html>
