--- a/internal/exporter/templates/data.html
+++ b/internal/exporter/templates/data.html
@@ -2,4 +2,8 @@ var NEGARANKS = [{{range .Rankings}}
     [{{.Rank}},{{.Percentile}},{{.DensePercentile}},{{.Index}},{{.Among}},{{.Span}},{{.Value}}],{{end}}
 ];
 
-var minWiki = {{.BoundingYears.MinTimestamp.Unix}}, maxWiki = {{.BoundingYears.MaxTimestamp.Unix}};
+{{ range $field, $info := .ExternalFields }}
+var {{ $field }} = new Map([{{ range $key, $value := $info }}["{{ $key }}", {{ $value }}],{{ end }}]);
+{{ end }}
+
+var minWiki = {{.MinTimestamp}}, maxWiki = {{.MaxTimestamp}};
