--- a/internal/exporter/templates/page.html
+++ b/internal/exporter/templates/page.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{.Lang}}">
-<head id="{{.Type}}" data-topic="{{.Topic}}">
+<head id="{{.Page.Type}}" data-topic="{{.Topic}}">
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
-<meta property="og:image" content="http://www.negapedia.org/images/logo.png"/>
+<meta property="og:image" content="{{.WWWURL}}/images/logo.png"/>
 
-<title>{{if eq .Type "topic"}}Category: {{end}}{{.Title}} - Negapedia</title>
+<title>{{if eq .Page.Type "topic"}}Category: {{end}}{{.Title}} - Negapedia</title>
 
-<link rel="stylesheet prefetch" type="text/css" href="http://www.negapedia.org/css/core.css">
+<link rel="stylesheet prefetch" type="text/css" href="{{.WWWURL}}/css/core.css">
 <link rel="canonical" href="{{.CanonicalURL}}">
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -22,11 +22,11 @@
 
 <div id="content">
 
-<h1 {{if eq .Type "article"}} data-name="{{.UnderscoredTitle}}"{{end}}>{{.Title}}</h1>
+<h1 {{if eq .Page.Type "article"}} data-name="{{.UnderscoredTitle}}"{{end}}>{{.Title}}</h1>
 
 <div id="intro"></div>
 
-{{if eq .Type "article"}}
+{{if eq .Page.Type "article"}}
 <div id="wikipedia-from">{{.Abstract}}</div>
 
 <div id="negawards"></div>
@@ -40,7 +40,7 @@
 </div>
 
 <div id="resolver">
-<script type="text/javascript" src="http://www.negapedia.org/js/resolver.js"></script>
+<script type="text/javascript" src="{{.WWWURL}}/js/resolver.js"></script>
 </div>
 
 </body></html>
