--- a/internal/exporter/templates/page.html
+++ b/internal/exporter/templates/page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{.Lang}}">
-<head id="{{.Page.Type}}" data-topic="{{.Topic}}">
+<head id="{{.Page.Type}}" data-topic="{{.Page.Topic}}">
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
 <meta property="og:image" content="{{.WWWURL}}/images/logo.png"/>
 
-<title>{{if eq .Page.Type "topic"}}Category: {{end}}{{.Title}} - Negapedia</title>
+<title>{{if eq .Page.Type "topic"}}Category: {{end}}{{.Page.Title}} - Negapedia</title>
 
 <link rel="stylesheet prefetch" type="text/css" href="{{.WWWURL}}/css/core.css">
 <link rel="canonical" href="{{.CanonicalURL}}">
@@ -22,12 +22,12 @@
 
 <div id="content">
 
-<h1 {{if eq .Page.Type "article"}} data-name="{{.UnderscoredTitle}}"{{end}}>{{.Title}}</h1>
+<h1 {{if eq .Page.Type "article"}} data-name="{{.Page.UnderscoredTitle}}"{{end}}>{{.Page.Title}}</h1>
 
 <div id="intro"></div>
 
 {{if eq .Page.Type "article"}}
-<div id="wikipedia-from">{{.Abstract}}</div>
+<div id="wikipedia-from">{{.Page.Abstract}}</div>
 
 <div id="negawards"></div>
 
